<resources>
    <string name="app_name">FinanceMenu</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_finance_cash">FinanceCash</string>
    <string name="title_activity_finance_creditcards">finance_creditcards</string>
    <string name="title_activity_assets">assets</string>
    <string name="title_activity_temp_cash">tempCash</string>
    <string name="title_activity_liabilities">liabilities</string>
    <string name="title_activity_goals">Goals</string>
    <string name="title_activity_stocks">Stocks</string>
    <string name="title_activity_live_stock">liveStock</string>
    <string name="title_activity_reminder_goals">reminderGoals</string>
    <string name="title_activity_viewtask">viewtask</string>
    <string name="title_activity_allergen_add">allergen_add</string>
    <string name="title_activity_allergens">Allergens</string>
    <string name="title_activity_check_up">CheckUpView</string>
    <string name="title_activity_check_up_add">CheckUpAdd</string>
    <string name="title_activity_diet">Diet</string>
    <string name="title_activity_diet_add">DietAdd</string>
    <string name="title_activity_exercise_plan">ExercisePlan</string>
    <string name="title_activity_exercise_plan_add">ExercisePlanAdd</string>
    <string name="title_activity_health">Health</string>
    <string name="title_activity_health_notes">HealthNotes</string>
    <string name="title_activity_health_notes_add">HealthNotesAdd</string>
    <string name="title_activity_medications">Medications</string>
    <string name="title_activity_medications_add">MedicationsAdd</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipes_add">RecipesAdd</string>
    <string name="title_activity_vital_signs">VitalSigns</string>
    <string name="title_activity_vital_signs_add">VitalSignsAdd</string>
    <string name="title_activity_clipmain_menu">CLIPMainMenu</string>
    <string name="title_activity_career">caree</string>
    <string name="title_activity_company_info_list">CompanyInfoList</string>
    <string name="title_activity_company_information">CompanyInformation</string>
    <string name="title_activity_display_message">DisplayMessage</string>
    <string name="title_activity_electronic_iddetails">ElectronicIDDetails</string>
    <string name="title_activity_electronic_idlist">ElectronicIDList</string>
    <string name="title_activity_job_search">JobSearch</string>
    <string name="title_activity_job_search_output">JobSearchOutput</string>
    <string name="title_activity_job_search_list">JobSearchList</string>
    <string name="title_activity_long_term_goal">LongTermGoal</string>
    <string name="title_activity_main_network_list">MainNetworkList</string>
    <string name="title_activity_network_list">NetworkList</string>
    <string name="title_activity_network_list_output">NetworkListOutput</string>
    <string name="title_activity_short_term_goal_details">ShortTermGoalDetails</string>
    <string name="title_activity_allergen_edit">AllergenEdit</string>
    <string name="title_activity_check_up_edit">CheckUpEdit</string>
    <string name="title_activity_diet_edit">DietEdit</string>
    <string name="title_activity_exercise_plan_edit">ExercisePlanEdit</string>
    <string name="title_activity_health_notes_edit">HealthNotesEdit</string>
    <string name="title_activity_medications_edit">MedicationsEdit</string>
    <string name="title_activity_recipes_edit">RecipesEdit</string>
    <string name="title_activity_vital_signs_edit">VitalSignsEdit</string>

    <!--Strings related to Education-->
    <string name="education_current">Current Education</string>
    <string name="add_education_current">Add Current Education</string>
    <string name="current_school">Current School</string>
    <string name="current_degree_type">Degree Type</string>
    <string name="current_major">Major</string>
    <string name="expected_graduation_date">Expected Graduation Date</string>
    <string name="education_financial_aid">Financial Aid</string>
    <string name="add_financial_aid">Add Financial Aid</string>
    <string name="loan_amount">Loans</string>
    <string name="scholarship_amount">Scholarships</string>
    <string name="grant_amount">Grants</string>
    <string name="education_graduation_plans">Graduation Plans</string>
    <string name="add_graduation_plans">Add Graduation Plans</string>
    <string name="add_school_plans">Add School Plans</string>
    <string name="add_work_plans">Add Work Plans</string>
    <string name="add_living_plans">Add Living Plans</string>
    <string name="education_school_applied">Schools Applied</string>
    <string name="add_school_applied">Add School Applied</string>
    <string name="school_applied">School</string>
    <string name="degree_type">Degree Type</string>
    <string name="area_study">Area of Study</string>
    <string name="application_deadline">Application Deadline</string>
    <string name="application_cost">Application Cost</string>
    <string name="yearly_cost">Yearly Cost</string>
    <string name="education_school_considered">Schools Considered</string>
    <string name="add_school_considered">Add School Considered</string>
    <string name="school_considered">School Considered</string>
    <string name="degree_type_considered">Degree Type</string>
    <string name="area_study_considered">Area of Study</string>
    <string name="yearly_cost_considered">Yearly Cost</string>
    <string name="button_submit">Submit</string>

    <string name="title_activity_add__current__education">Add_Current_Education</string>
    <string name="title_activity_add__financial__aid">Add_Financial_Aid</string>
    <string name="title_activity_add__graduate__plans">Add_Graduate_Plans</string>
    <string name="title_activity_add__school__applied">Add_School_Applied</string>
    <string name="title_activity_add__school__considered">Add_School_Considered</string>
    <string name="title_activity_current__education">Current_Education</string>
    <string name="title_activity_graduate__plans">Graduate_Plans</string>
    <string name="title_activity_school__applied">Schools_Applied</string>
    <string name="title_activity_school__considered">Schools_Considered</string>
    <string name="title_activity_financial__aid">Financial_Aid</string>

    <string name="title_education_section">Education</string>
    <string name="title_activity_education__main">Education_Main</string>

    <string name="title_activity_about_me">About Me</string>
</resources>
